--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </section>
 
 
-        <section class="hero bg-white">
+        <!-- <section class="hero bg-white">
             <div class="container">
                 <div class="caption">
                     <h1 class="text-dark title-tentangKami">Tentang Kami</h1>
@@ -159,7 +159,84 @@
                     <img src="img/about.svg" alt="img about">
                 </div>
             </div>
+        </section> -->
+
+        <section class="containerArtikelHome pt-100">
+            <div class="container">
+                <div class="title">
+                    <h1>Update Tentang Kami</h1>
+                    <p>
+                        Dapatkan semua informasi terbaru dari kami melalui artikel dan galeri yang sudah kami siapkan
+                    </p>
+                </div>
+
+                <div class="artikelHome pt-50">
+                    <a href="perArtikel.html" class="perArtikel">
+                        <h2>Cara Membuat Auth Login Dengan Laravel</h2>
+                        <div class="keterangan">
+                            <div class="icon">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <p><strong>Rifki Romadhan</strong> | 12 November 2020</p>
+                        </div>
+                    </a>
+
+                    <a href="perArtikel.html" class="perArtikel">
+                        <h2>Cara Membuat Auth Login Dengan Laravel</h2>
+                        <div class="keterangan">
+                            <div class="icon">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <p><strong>Rifki Romadhan</strong> | 12 November 2020</p>
+                        </div>
+                    </a>
+
+                    <a href="perArtikel.html" class="perArtikel">
+                        <h2>Cara Membuat Auth Login Dengan Laravel</h2>
+                        <div class="keterangan">
+                            <div class="icon">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <p><strong>Rifki Romadhan</strong> | 12 November 2020</p>
+                        </div>
+                    </a>
+
+                    <a href="perArtikel.html" class="perArtikel">
+                        <h2>Cara Membuat Auth Login Dengan Laravel</h2>
+                        <div class="keterangan">
+                            <div class="icon">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <p><strong>Rifki Romadhan</strong> | 12 November 2020</p>
+                        </div>
+                    </a>
+
+                    <a href="perArtikel.html" class="perArtikel">
+                        <h2>Cara Membuat Auth Login Dengan Laravel</h2>
+                        <div class="keterangan">
+                            <div class="icon">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <p><strong>Rifki Romadhan</strong> | 12 November 2020</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </section>
+
+        <section class="galeriHome pt-50 pb-50">
+            <div class="container">
+                <img src="img/galeri/p-1.jpg" alt="img galeri" class="perGaleri">
+                <img src="img/galeri/p-5.jpg" alt="img galeri" class="perGaleri">
+                <img src="img/galeri/p-2.jpg" alt="img galeri" class="perGaleri">
+                <img src="img/galeri/p-3.jpg" alt="img galeri" class="perGaleri">
+                <img src="img/galeri/p-3.jpg" alt="img galeri" class="perGaleri">
+                <img src="img/galeri/p-4.jpg" alt="img galeri" class="perGaleri">
+                <img src="img/galeri/p-5.jpg" alt="img galeri" class="perGaleri">
+                <img src="img/galeri/calendar-works.jpg" alt="img galeri" class="perGaleri">
+            </div>
+        </section>
+
 
         <!-- 6937FF -->
 
