membuat halaman FAQ, dan TermsCondition

--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/table/table.css">
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
@@ -65,78 +64,77 @@
 
 
     <main>
-        <section class="prestasi pt-15-vh pb-100">
+
+        <section class="containerFAQ pt-15-vh pb-100">
             <div class="container">
                 <div class="title">
-                    <h1>Prestasi HMJ MI</h1>
+                    <h1>FAQ</h1>
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis sapiente, aut totam repellendus
-                        quos recusandae exercitationem tempora voluptas animi voluptates.
+                        Berikut adalah beberapa pertanyaan yang paling sering ditanyakan.
                     </p>
                 </div>
 
-                <div class="overflow-x-auto mt-50">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>No</th>
-                                <th>Nama Penghargaan</th>
-                                <th>Nama Peraih</th>
-                                <th>Tingkat</th>
-                                <th>Jumlah</th>
-                            </tr>
-                        </thead>
+                <div class="FAQ pageFAQ">
+                    <div class="perFAQ">
+                        <div class="pertanyaan">
+                            <p>Yang ngajar siapa ?</p>
 
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>Juara 2 Web Design Dalam Acara IITC AMIKOM Purwokerto</td>
-                                <td>Rifki Romadhan</td>
-                                <td>Nasional</td>
-                                <td>1</td>
-                            </tr>
+                            <div class="icon">
+                                <i class="fas fa-angle-down"></i>
+                            </div>
+                        </div>
 
-                            <tr>
-                                <td>2</td>
-                                <td>Juara 3 LKS Web Technologies KAB Purbalingga 2021</td>
-                                <td>Rifki Romadhan</td>
-                                <td>Kabupaten</td>
-                                <td>1</td>
-                            </tr>
+                        <div class="jawaban">
+                            Untuk setiap series-nya tersendiri, kami mengambil dari Youtube semua. Tapi untuk
+                            konsultasi secara khusus, kami sediakan beberapa kakak kelas yang terbukti
+                            bepengalaman
+                            dibidangnya masing-masing
+                        </div>
+                    </div>
 
-                            <tr>
-                                <td>3</td>
-                                <td>Peraih Mendali Perunggu Dalam Ajang Nasional Science Competition 2021</td>
-                                <td>Rifki Romadhan</td>
-                                <td>Nasional</td>
-                                <td>1</td>
-                            </tr>
+                    <div class="perFAQ">
+                        <div class="pertanyaan">
+                            <p>Apakah semuanya gratis ?</p>
+                            <div class="icon">
+                                <i class="fas fa-angle-down"></i>
+                            </div>
+                        </div>
+
+                        <div class="jawaban">
+                            Iya, semua yang ada disini <strong>GRATIS</strong> tidak dipungut biaya sepeserpun, tapi
+                            hanya dapat diakses oleh siswa
+                            jurusan RPL SMKN 2 Purbalingga
+                        </div>
+                    </div>
 
 
-                            <tr>
-                                <td>4</td>
-                                <td>Pemenang 10 Besar Dalam Acara Skilvul 1000 SMK</td>
-                                <td>Rifki Romadhan</td>
-                                <td>Nasional</td>
-                                <td>1</td>
-                            </tr>
+                    <div class="perFAQ">
+                        <div class="pertanyaan">
+                            <p>Bagaimana cara saya mengapresiasinya ?</p>
+                            <div class="icon">
+                                <i class="fas fa-angle-down"></i>
+                            </div>
+                        </div>
 
-                            <tr>
-                                <td>5</td>
-                                <td>Penulis Terpilih Dalam Lomba Cipta Puisi Tingkat Nasional Tema "Rindu Sekolah"</td>
-                                <td>Rifki Romadhan</td>
-                                <td>Nasional</td>
-                                <td>1</td>
-                            </tr>
-                        </tbody>
+                        <div class="jawaban">
+                            Kamu hanya cukup belajar yang tekun dan kembangkan bakat kamu, dan <strong>HARUS JUARA
+                                LKS TINGKAT NASIONAL</strong>
+                        </div>
+                    </div>
 
-                        <tfoot>
-                            <tr>
-                                <th colspan="4">Jumlah Prestasi</th>
-                                <td>5</td>
-                            </tr>
-                        </tfoot>
-                    </table>
+                    <div class="perFAQ">
+                        <div class="pertanyaan">
+                            <p>Ada sosial media ?</p>
+                            <div class="icon">
+                                <i class="fas fa-angle-down"></i>
+                            </div>
+                        </div>
+
+                        <div class="jawaban">
+                            Tentu saja ada, Telegram, Twitter, Facebook, Instagram, Discord
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
