--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 
-        <section class="containerFitur pt-50">
+        <section class="containerFitur bg-agakGelap pt-50 pb-50">
             <div class="container">
                 <div class="title">
                     <h1>HMJ MI STMIK AKAKOM</h1>
@@ -161,7 +161,7 @@
             </div>
         </section> -->
 
-        <section class="containerArtikelHome pt-100">
+        <section class="containerArtikelHome pt-50">
             <div class="container">
                 <div class="title">
                     <h1>Update Tentang Kami</h1>
@@ -381,7 +381,7 @@
                 </div>
 
                 <div class="sosmed">
-                    <a href="" class="perSosmed">
+                    <a href="https://facebook.com" class="perSosmed">
                         <div class="icon facebook">
                             <i class="fab fa-facebook"></i>
                         </div>
@@ -395,7 +395,7 @@
                         </div>
                     </a>
 
-                    <a href="" class="perSosmed">
+                    <a href="https://discord.com" class="perSosmed">
                         <div class="icon discord">
                             <i class="fab fa-discord"></i>
                         </div>
@@ -409,7 +409,7 @@
                         </div>
                     </a>
 
-                    <a href="" class="perSosmed">
+                    <a href="https://twitter.com" class="perSosmed">
                         <div class="icon twitter">
                             <i class="fab fa-twitter"></i>
                         </div>
@@ -423,7 +423,7 @@
                         </div>
                     </a>
 
-                    <a href="" class="perSosmed">
+                    <a href="https://youtube.com" class="perSosmed">
                         <div class="icon youtube">
                             <i class="fab fa-youtube"></i>
                         </div>
@@ -438,7 +438,7 @@
                     </a>
 
 
-                    <a href="" class="perSosmed">
+                    <a href="https://instagram.com" class="perSosmed">
                         <div class="icon instagram">
                             <i class="fab fa-instagram"></i>
                         </div>
@@ -452,7 +452,7 @@
                         </div>
                     </a>
 
-                    <a href="" class="perSosmed">
+                    <a href="https://telegram.com" class="perSosmed">
                         <div class="icon telegram">
                             <i class="fab fa-telegram"></i>
                         </div>
@@ -474,13 +474,12 @@
             <div class="container">
 
                 <div class="clientTitle">
-                    <h2>Classroom</h2>
+                    <h2>HMJ MI</h2>
                     <p>
-                        SMAKDA Classroom adalah platform pembelajaran online yang berbentuk screencast yang ditujukan
-                        untuk para
-                        siswa RPL SMKN 2 Purbalingga. Melalui seri-seri seperti Laravel, Reactjs, Vuejs, Inertiajs,
-                        Html, Bootstrap,
-                        Tailwind CSS, dan Banyak lagi.
+                        Menghimpun dan mewadahi mahasiswa jurusan Informatika STMIK
+                        AKAKOM yang dalam menyalurkan aspirasi dan mengkoordinasikan
+                        kegiatan mahasiswa Manajemen Informatika serta menjaga nama baik almamater STMIK AKAKOM
+                        Yogyakarta.
                     </p>
                 </div>
             </div>
@@ -492,12 +491,14 @@
             <div class="container">
                 <div class="caption">
                     <h2>Tertarik Untuk Kolaborasi?</h2>
-                    <p>Memiliki kemampuan dibidang IT, dan ingin mengembangkan Platform SMAKDA Classroom? Hubungi para
-                        pengembang awal untuk mendapatkan akses tersebut!</p>
+                    <p>
+                        Kami suka membangun hubungan dekat dengan partner Kami. Kami percaya kolaborasi dinamis adalah
+                        satu-satunya cara untuk menyelesaikan pekerjaan dengan baik.
+                    </p>
                 </div>
 
                 <div class="cta">
-                    <a href="" class="btn btn-primary">Hubungi</a>
+                    <a href="contact.html" class="btn btn-primary">Hubungi</a>
                 </div>
             </div>
         </section>
@@ -509,12 +510,12 @@
                         <h2>About Us</h2>
                     </div>
                     <p>
-                        SMAKDA Classroom adalah platform pembelajaran online yang berbentuk screencast yang ditujukan
-                        untuk para
-                        siswa RPL SMKN 2 Purbalingga.
+                        HMJ MI adalah platform untuk jurusan Managemen Informatika Universitas Teknologi Digital
+                        Indonesia.
                     </p>
                     <p>
-                        SMAKDA Classroom is a Trademark of <a href="github.com/IkkiRama" class="pencipta">Rifki
+                        HMJ MI part of UTDI is a Trademark of <a href="https://github.com/IkkiRama"
+                            class="pencipta">Rifki
                             Romadhan</a>. Copyright
                         &copy;2021 ™
                     </p>
@@ -523,25 +524,25 @@
 
                 <div class="box">
                     <h2>Extra</h2>
-                    <a href="index.html">FAQ</a>
-                    <a href="destinasi.html">Blog</a>
-                    <a href="destinasi.html">Asset</a>
+                    <a href="faq.html">FAQ</a>
+                    <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
-                    <a href="kontak.html">Privacy Policy</a>
-                    <a href="kontak.html">Saweria (Donate)</a>
-                    <a href="kontak.html">Terms & Condition</a>
+                    <a href="visiMisi.html">Visi & Misi</a>
+                    <a href="community.html">Community</a>
+                    <a href="PrivacyPolicy.html">Privacy Policy</a>
+                    <a href="TermsCondition.html">Terms & Condition</a>
                 </div>
 
 
                 <div class="box">
                     <h2>Social</h2>
-                    <a href="index.html">Github</a>
-                    <a href="destinasi.html">Twitter</a>
-                    <a href="kontak.html">Discord</a>
-                    <a href="kontak.html">Youtube</a>
-                    <a href="kontak.html">Telegram</a>
-                    <a href="kontak.html">Facebook</a>
-                    <a href="kontak.html">Instagram</a>
+                    <a href="https://github.com/IkkiRama">Github</a>
+                    <a href="https://twitter.com">Twitter</a>
+                    <a href="https://discord.com">Discord</a>
+                    <a href="https://youtube.com">Youtube</a>
+                    <a href="https://telegram.com">Telegram</a>
+                    <a href="https://facebook.com">Facebook</a>
+                    <a href="https://instagram.com">Instagram</a>
                 </div>
 
             </div>
@@ -551,9 +552,20 @@
 
     <footer>
         <div class="container">
-            SMAKDA Classroom &copy; 2021 | platform pembelajaran online.
+            <p>Created with <span>&hearts;</span> by TasBee</p>
         </div>
     </footer>
+
+
+    <!-- <div class="modalContainer">
+        <div class="modal">
+            <div class="modal-title">
+
+            </div>
+            <div class="modal-body"></div>
+            <div class="modal-footer"></div>
+        </div>
+    </div> -->
 
 </body>
 
