meresponsivekan halaman kontak, dan footer section

--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | SMAKDA Classroom</title>
+    <meta name="keywords" content="HMJ - Manajemen Informatika">
+    <meta name="description" content="HMJ - Manajemen Informatika">
+    <title>Kontak | HMJ - Manajemen Informatika</title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -18,71 +19,50 @@
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <script src="fontawesome/js/all.min.js"></script>
 
-    <link rel="apple-touch-icon" href="img/logo.png">
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <script src="js/script.js" defer></script>
+    <script src="js/faq.js" defer></script>
+
+    <link rel="apple-touch-icon" href="img/logo HIMARAKSI.png">
+    <link rel="shortcut icon" href="img/logo HIMARAKSI.png" type="image/x-icon">
 </head>
 
 <body>
 
     <header>
         <div class="container">
-            <div class="kanan">
-                <a href="" class="logo">
-                    <!-- <img src="img/logo.png" alt="logo"> -->
-                    <h1>SMAKDA<br><span>Classroom</span></h1>
-                </a>
+            <a href="index.html" class="logo">
+                <img src="img/logo HIMARAKSI.png" alt="logo">
+            </a>
 
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="series.html">Series</a></li>
-                        <li><a href="artikel.html">Artikel</a></li>
-                        <li><a href="community.html">Community</a></li>
-                    </ul>
-                </nav>
-            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="prestasi.html">Prestasi</a></li>
+                    <li><a href="galery.html" class="active">Galery</a></li>
+                    <li><a href="artikel.html">Artikel</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
 
-            <div class="kiri">
-
-                <div class="icon cari">
-                    <i class="fas fa-search"></i>
-                </div>
-
-                <span class="garis">|</span>
-
-                <div class="auth ">
-                    <a href="">Login</a>
-                    <a href="">Register</a>
-                </div>
-
-                <div class="profil d-none">
-                    <img src="img/people/img1.jpg" alt="img user">
-                </div>
-
-                <div class="menu">
-                    <input type="checkbox">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-
+            <div class="menu">
+                <input type="checkbox">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
-
     </header>
 
-
     <nav class="containerNavMobile">
-        <div class="navMobile pt-15-vh">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="series.html">Series</a></li>
-                <li><a href="artikel.html">Artikel</a></li>
-                <li><a href="community.html">Community</a></li>
-            </ul>
-        </div>
+        <ul class="navMobile pt-15-vh">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="prestasi.html">Prestasi</a></li>
+            <li><a href="galery.html" class="active">Galery</a></li>
+            <li><a href="artikel.html">Artikel</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
     </nav>
+
 
     <main>
 
@@ -128,13 +108,12 @@
             <div class="container">
 
                 <div class="clientTitle">
-                    <h2>Classroom</h2>
+                    <h2>HMJ MI</h2>
                     <p>
-                        SMAKDA Classroom adalah platform pembelajaran online yang berbentuk screencast yang ditujukan
-                        untuk para
-                        siswa RPL SMKN 2 Purbalingga. Melalui seri-seri seperti Laravel, Reactjs, Vuejs, Inertiajs,
-                        Html, Bootstrap,
-                        Tailwind CSS, dan Banyak lagi.
+                        Menghimpun dan mewadahi mahasiswa jurusan Informatika STMIK
+                        AKAKOM yang dalam menyalurkan aspirasi dan mengkoordinasikan
+                        kegiatan mahasiswa Manajemen Informatika serta menjaga nama baik almamater STMIK AKAKOM
+                        Yogyakarta.
                     </p>
                 </div>
             </div>
@@ -146,12 +125,14 @@
             <div class="container">
                 <div class="caption">
                     <h2>Tertarik Untuk Kolaborasi?</h2>
-                    <p>Memiliki kemampuan dibidang IT, dan ingin mengembangkan Platform SMAKDA Classroom? Hubungi para
-                        pengembang awal untuk mendapatkan akses tersebut!</p>
+                    <p>
+                        Kami suka membangun hubungan dekat dengan partner Kami. Kami percaya kolaborasi dinamis adalah
+                        satu-satunya cara untuk menyelesaikan pekerjaan dengan baik.
+                    </p>
                 </div>
 
                 <div class="cta">
-                    <a href="" class="btn btn-primary">Hubungi</a>
+                    <a href="contact.html" class="btn btn-primary">Hubungi</a>
                 </div>
             </div>
         </section>
@@ -163,89 +144,53 @@
                         <h2>About Us</h2>
                     </div>
                     <p>
-                        SMAKDA Classroom adalah platform pembelajaran online yang berbentuk screencast yang ditujukan
-                        untuk para
-                        siswa RPL SMKN 2 Purbalingga.
+                        HMJ MI adalah platform untuk jurusan Managemen Informatika Universitas Teknologi Digital
+                        Indonesia.
                     </p>
                     <p>
-                        SMAKDA Classroom is a Trademark of <a href="github.com/IkkiRama" class="pencipta">Rifki
+                        HMJ MI part of UTDI is a Trademark of <a href="https://github.com/IkkiRama"
+                            class="pencipta">Rifki
                             Romadhan</a>. Copyright
                         &copy;2021 ™
                     </p>
+
                 </div>
 
                 <div class="box">
                     <h2>Extra</h2>
-                    <a href="index.html">FAQ</a>
-                    <a href="destinasi.html">Blog</a>
-                    <a href="destinasi.html">Asset</a>
+                    <a href="faq.html">FAQ</a>
+                    <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
-                    <a href="kontak.html">Privacy Policy</a>
-                    <a href="kontak.html">Saweria (Donate)</a>
-                    <a href="kontak.html">Terms & Condition</a>
+                    <a href="visiMisi.html">Visi & Misi</a>
+                    <a href="community.html">Community</a>
+                    <a href="PrivacyPolicy.html">Privacy Policy</a>
+                    <a href="TermsCondition.html">Terms & Condition</a>
                 </div>
 
 
                 <div class="box">
                     <h2>Social</h2>
-                    <a href="index.html">Github</a>
-                    <a href="destinasi.html">Twitter</a>
-                    <a href="kontak.html">Discord</a>
-                    <a href="kontak.html">Youtube</a>
-                    <a href="kontak.html">Telegram</a>
-                    <a href="kontak.html">Facebook</a>
-                    <a href="kontak.html">Instagram</a>
+                    <a href="https://github.com/IkkiRama">Github</a>
+                    <a href="https://twitter.com">Twitter</a>
+                    <a href="https://discord.com">Discord</a>
+                    <a href="https://youtube.com">Youtube</a>
+                    <a href="https://telegram.com">Telegram</a>
+                    <a href="https://facebook.com">Facebook</a>
+                    <a href="https://instagram.com">Instagram</a>
                 </div>
 
             </div>
         </section>
+
+
     </main>
 
     <footer>
         <div class="container">
-            SMAKDA Classroom &copy; 2021 | platform pembelajaran online.
+            <p>Created with <span>&hearts;</span> by TasBee</p>
         </div>
     </footer>
 
-
-    <div class="modalContainer">
-        <div class="modal">
-            <div class="modal-title">
-                <h2>Cari Series</h2>
-
-                <div class="icon close">
-                    <i class="fas fa-times"></i>
-                </div>
-            </div>
-
-            <div class="modal-body">
-                <div class="searchBox">
-
-                    <form action="">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="text" placeholder="Cari serie">
-                                <button class="btn btn-primary"><i class="fas fa-search"></i></button>
-                            </div>
-                        </div>
-                    </form>
-
-                    <div class="suggesti">
-                        <a href="" class="perSuggesti">HTML</a>
-                        <a href="" class="perSuggesti">CSS</a>
-                        <a href="" class="perSuggesti">HTML</a>
-                        <a href="" class="perSuggesti">CSS</a>
-                        <a href="" class="perSuggesti">HTML</a>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="modal-footer">
-                <a href="" class="btn btn-primary">Lihat Semua Pencarian</a>
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
