--- a/galeri.html
+++ b/galeri.html
@@ -9,11 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HMJ - Manajemen Informatika">
     <meta name="description" content="HMJ - Manajemen Informatika">
-    <title>HMJ - Manajemen Informatika</title>
+    <title>Galeri | HMJ - Manajemen Informatika</title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/table/table.css">
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
@@ -40,7 +39,7 @@
                     <li><a href="prestasi.html">Prestasi</a></li>
                     <li><a href="galery.html" class="active">Galery</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
-                    <li><a href="about.html" >About</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
 
@@ -94,17 +93,17 @@
             </div>
         </section>
 
+
         <section class="containerClient pb-100 pt-50">
             <div class="container">
 
                 <div class="clientTitle">
-                    <h2>Classroom</h2>
+                    <h2>HMJ MI</h2>
                     <p>
-                        SMAKDA Classroom adalah platform pembelajaran online yang berbentuk screencast yang ditujukan
-                        untuk para
-                        siswa RPL SMKN 2 Purbalingga. Melalui seri-seri seperti Laravel, Reactjs, Vuejs, Inertiajs,
-                        Html, Bootstrap,
-                        Tailwind CSS, dan Banyak lagi.
+                        Menghimpun dan mewadahi mahasiswa jurusan Informatika STMIK
+                        AKAKOM yang dalam menyalurkan aspirasi dan mengkoordinasikan
+                        kegiatan mahasiswa Manajemen Informatika serta menjaga nama baik almamater STMIK AKAKOM
+                        Yogyakarta.
                     </p>
                 </div>
             </div>
@@ -116,12 +115,14 @@
             <div class="container">
                 <div class="caption">
                     <h2>Tertarik Untuk Kolaborasi?</h2>
-                    <p>Memiliki kemampuan dibidang IT, dan ingin mengembangkan Platform SMAKDA Classroom? Hubungi para
-                        pengembang awal untuk mendapatkan akses tersebut!</p>
+                    <p>
+                        Kami suka membangun hubungan dekat dengan partner Kami. Kami percaya kolaborasi dinamis adalah
+                        satu-satunya cara untuk menyelesaikan pekerjaan dengan baik.
+                    </p>
                 </div>
 
                 <div class="cta">
-                    <a href="" class="btn btn-primary">Hubungi</a>
+                    <a href="contact.html" class="btn btn-primary">Hubungi</a>
                 </div>
             </div>
         </section>
@@ -133,12 +134,12 @@
                         <h2>About Us</h2>
                     </div>
                     <p>
-                        SMAKDA Classroom adalah platform pembelajaran online yang berbentuk screencast yang ditujukan
-                        untuk para
-                        siswa RPL SMKN 2 Purbalingga.
+                        HMJ MI adalah platform untuk jurusan Managemen Informatika Universitas Teknologi Digital
+                        Indonesia.
                     </p>
                     <p>
-                        SMAKDA Classroom is a Trademark of <a href="github.com/IkkiRama" class="pencipta">Rifki
+                        HMJ MI part of UTDI is a Trademark of <a href="https://github.com/IkkiRama"
+                            class="pencipta">Rifki
                             Romadhan</a>. Copyright
                         &copy;2021 ™
                     </p>
@@ -147,35 +148,36 @@
 
                 <div class="box">
                     <h2>Extra</h2>
-                    <a href="index.html">FAQ</a>
-                    <a href="destinasi.html">Blog</a>
-                    <a href="destinasi.html">Asset</a>
+                    <a href="faq.html">FAQ</a>
+                    <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
-                    <a href="kontak.html">Privacy Policy</a>
-                    <a href="kontak.html">Saweria (Donate)</a>
-                    <a href="kontak.html">Terms & Condition</a>
+                    <a href="visiMisi.html">Visi & Misi</a>
+                    <a href="community.html">Community</a>
+                    <a href="PrivacyPolicy.html">Privacy Policy</a>
+                    <a href="TermsCondition.html">Terms & Condition</a>
                 </div>
 
 
                 <div class="box">
                     <h2>Social</h2>
-                    <a href="index.html">Github</a>
-                    <a href="destinasi.html">Twitter</a>
-                    <a href="kontak.html">Discord</a>
-                    <a href="kontak.html">Youtube</a>
-                    <a href="kontak.html">Telegram</a>
-                    <a href="kontak.html">Facebook</a>
-                    <a href="kontak.html">Instagram</a>
+                    <a href="https://github.com/IkkiRama">Github</a>
+                    <a href="https://twitter.com">Twitter</a>
+                    <a href="https://discord.com">Discord</a>
+                    <a href="https://youtube.com">Youtube</a>
+                    <a href="https://telegram.com">Telegram</a>
+                    <a href="https://facebook.com">Facebook</a>
+                    <a href="https://instagram.com">Instagram</a>
                 </div>
 
             </div>
         </section>
 
+
     </main>
 
     <footer>
         <div class="container">
-            SMAKDA Classroom &copy; 2021 | platform pembelajaran online.
+            <p>Created with <span>&hearts;</span> by TasBee</p>
         </div>
     </footer>
 
