--- a/prestasi.html
+++ b/prestasi.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HMJ - Manajemen Informatika">
     <meta name="description" content="HMJ - Manajemen Informatika">
-    <title>FAQ | HMJ - Manajemen Informatika</title>
+    <title>Prestasi | HMJ - Manajemen Informatika</title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -20,7 +20,6 @@
     <script src="fontawesome/js/all.min.js"></script>
 
     <script src="js/script.js" defer></script>
-    <script src="js/faq.js" defer></script>
 
     <link rel="apple-touch-icon" href="img/logo HIMARAKSI.png">
     <link rel="shortcut icon" href="img/logo HIMARAKSI.png" type="image/x-icon">
@@ -37,7 +36,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="prestasi.html">Prestasi</a></li>
+                    <li><a href="prestasi.html" class="active">Prestasi</a></li>
                     <li><a href="galeri.html">Galeri</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
                     <li><a href="anggota.html">Anggota</a></li>
@@ -56,7 +55,7 @@
     <nav class="containerNavMobile">
         <ul class="navMobile pt-15-vh">
             <li><a href="index.html">Home</a></li>
-            <li><a href="prestasi.html">Prestasi</a></li>
+            <li><a href="prestasi.html" class="active">Prestasi</a></li>
             <li><a href="galeri.html">Galeri</a></li>
             <li><a href="artikel.html">Artikel</a></li>
             <li><a href="anggota.html">Anggota</a></li>
