Membuat halaman fasilitas

--- a/contact.html
+++ b/contact.html
@@ -16,11 +16,7 @@
     <link rel="stylesheet" href="css/form/form.css">
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js"></script>
-
     <script src="js/script.js" defer></script>
-    <script src="js/faq.js" defer></script>
 
     <link rel="apple-touch-icon" href="img/logo HIMARAKSI.png">
     <link rel="shortcut icon" href="img/logo HIMARAKSI.png" type="image/x-icon">
@@ -38,7 +34,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="prestasi.html">Prestasi</a></li>
-                    <li><a href="galery.html" class="active">Galery</a></li>
+                    <li><a href="galery.html">Galery</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
@@ -57,7 +53,7 @@
         <ul class="navMobile pt-15-vh">
             <li><a href="index.html">Home</a></li>
             <li><a href="prestasi.html">Prestasi</a></li>
-            <li><a href="galery.html" class="active">Galery</a></li>
+            <li><a href="galery.html">Galery</a></li>
             <li><a href="artikel.html">Artikel</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
