--- a/fasilitas.html
+++ b/fasilitas.html
@@ -9,10 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HMJ - Manajemen Informatika">
     <meta name="description" content="HMJ - Manajemen Informatika">
-    <title>Galeri | HMJ - Manajemen Informatika</title>
+    <title>Fasilitas | HMJ - Manajemen Informatika</title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/table/table.css">
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
     <script src="js/script.js" defer></script>
@@ -33,7 +34,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="prestasi.html">Prestasi</a></li>
-                    <li><a href="galery.html" class="active">Galery</a></li>
+                    <li><a href="galery.html">Galery</a></li>
                     <li><a href="artikel.html">Artikel</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
@@ -52,7 +53,7 @@
         <ul class="navMobile pt-15-vh">
             <li><a href="index.html">Home</a></li>
             <li><a href="prestasi.html">Prestasi</a></li>
-            <li><a href="galery.html" class="active">Galery</a></li>
+            <li><a href="galery.html">Galery</a></li>
             <li><a href="artikel.html">Artikel</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
@@ -61,32 +62,23 @@
 
     <main>
 
-        <section class="pt-15-vh pb-100">
+        <section class="fasilitas">
             <div class="container">
-                <div class="title mb-50">
-                    <h1>Galeri Kami</h1>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio quasi eum incidunt, odio alias
-                        placeat magni recusandae aut quidem obcaecati praesentium labore fugit quos laborum doloribus
-                        quibusdam dolor, modi beatae.
-                    </p>
-                </div>
 
-                <div class="galeri">
-                    <img src="img/galeri/calendar-works.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-1.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-2.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-3.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-4.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-5.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/calendar-works.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-1.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-2.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-3.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-4.jpg" alt="img galeri" class="perGaleri">
-                    <img src="img/galeri/p-5.jpg" alt="img galeri" class="perGaleri">
-                </div>
             </div>
+        </section>
+
+        <section class="overflow-x-auto">
+            <table>
+                <thead>
+                    <tr>
+                        <th>No</th>
+                        <th>Nama Ruangan</th>
+                        <th>Keterangan</th>
+                        <th></th>
+                    </tr>
+                </thead>
+            </table>
         </section>
 
 
