Memperbaiki halaman PrivacyPolicy & TermsCondition

--- a/fasilitas.html
+++ b/fasilitas.html
@@ -62,22 +62,92 @@
 
     <main>
 
-        <section class="fasilitas">
+        <section class="hero pt-15-vh ">
             <div class="container">
+                <div class="caption">
+                    <h1>We provide <span>qualified facilities to excel.</span></h1>
+                    <!-- Kami menyediakan fasilitas yang mumpuni untuk berprestasi -->
+                    <p>
+                        Kami menyediakan berbagai macam fasilitas untuk mendukung organisasi ini berjalan dan
+                        berprestasi ditingkat nasional
+                    </p>
 
+                    <div class="cta">
+                        <a href="series.html" class="btn btn-primary">Explore</a>
+                    </div>
+                </div>
+                <div class="img">
+                    <img src="img/hero-img.png" alt="img hero">
+                </div>
             </div>
         </section>
 
-        <section class="overflow-x-auto">
+        <!-- kami menyediakan fasilitas yang mumpuni untuk menunjang organisasi -->
+
+        <section class="overflow-x-auto pb-100 pt-50">
             <table>
                 <thead>
                     <tr>
                         <th>No</th>
                         <th>Nama Ruangan</th>
+                        <th>Taraf</th>
                         <th>Keterangan</th>
-                        <th></th>
                     </tr>
                 </thead>
+
+                <tbody>
+
+                    <tr>
+                        <td>1</td>
+                        <td>Lab Web</td>
+                        <td>Internasional</td>
+                        <td>Baik</td>
+                    </tr>
+
+                    <tr>
+                        <td>2</td>
+                        <td>Lab Komputasi Awan</td>
+                        <td>Internasional</td>
+                        <td>Baik</td>
+                    </tr>
+
+                    <tr>
+                        <td>3</td>
+                        <td>Lab Mobile App</td>
+                        <td>Internasional</td>
+                        <td>Baik</td>
+                    </tr>
+
+
+                    <tr>
+                        <td>4</td>
+                        <td>Lab VAR</td>
+                        <td>Nasional</td>
+                        <td>Baik</td>
+                    </tr>
+
+                    <tr>
+                        <td>5</td>
+                        <td>Lab AR</td>
+                        <td>Nasional</td>
+                        <td>Baik</td>
+                    </tr>
+
+                    <tr>
+                        <td>6</td>
+                        <td>Lab CyberSecurity</td>
+                        <td>Nasional</td>
+                        <td>Baik</td>
+                    </tr>
+
+                    <tr>
+                        <td>7</td>
+                        <td>Lab Game</td>
+                        <td>Nasional</td>
+                        <td>Baik</td>
+                    </tr>
+
+                </tbody>
             </table>
         </section>
 
