--- a/TermsCondition.html
+++ b/TermsCondition.html
@@ -3,90 +3,63 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Condition | SMAKDA Classroom</title>
+    <meta name="keywords" content="HMJ - Manajemen Informatika">
+    <meta name="description" content="HMJ - Manajemen Informatika">
+    <title>Terms & Condition | HMJ - Manajemen Informatika</title>
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/form/form.css">
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js"></script>
-
-    <link rel="apple-touch-icon" href="img/logo.png">
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <script src="js/script.js" defer></script>
-    <script src="js/faq.js" defer></script>
+
+    <link rel="apple-touch-icon" href="img/logo HIMARAKSI.png">
+    <link rel="shortcut icon" href="img/logo HIMARAKSI.png" type="image/x-icon">
 </head>
 
 <body>
 
     <header>
         <div class="container">
-            <div class="kanan">
-                <a href="" class="logo">
-                    <!-- <img src="img/logo.png" alt="logo"> -->
-                    <h1>SMAKDA<br><span>Classroom</span></h1>
-                </a>
+            <a href="index.html" class="logo">
+                <img src="img/logo HIMARAKSI.png" alt="logo">
+            </a>
 
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="series.html">Series</a></li>
-                        <li><a href="artikel.html">Artikel</a></li>
-                        <li><a href="community.html">Community</a></li>
-                    </ul>
-                </nav>
-            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="prestasi.html">Prestasi</a></li>
+                    <li><a href="galery.html">Galery</a></li>
+                    <li><a href="artikel.html">Artikel</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
 
-            <div class="kiri">
-
-                <div class="icon cari">
-                    <i class="fas fa-search"></i>
-                </div>
-
-                <span class="garis">|</span>
-
-                <div class="auth ">
-                    <a href="">Login</a>
-                    <a href="">Register</a>
-                </div>
-
-                <div class="profil d-none">
-                    <img src="img/people/img1.jpg" alt="img user">
-                </div>
-
-                <div class="menu">
-                    <input type="checkbox">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-
+            <div class="menu">
+                <input type="checkbox">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
-
     </header>
 
-
     <nav class="containerNavMobile">
-        <div class="navMobile pt-15-vh">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="series.html">Series</a></li>
-                <li><a href="artikel.html">Artikel</a></li>
-                <li><a href="community.html">Community</a></li>
-            </ul>
-        </div>
+        <ul class="navMobile pt-15-vh">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="prestasi.html">Prestasi</a></li>
+            <li><a href="galery.html">Galery</a></li>
+            <li><a href="artikel.html">Artikel</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
     </nav>
 
-    <main>
 
+    <main>
 
         <section class="TermsCondition pt-15-vh pb-100">
             <div class="container">
@@ -106,14 +79,14 @@
                 <p>
                     Izin diberikan untuk mengunduh sementara satu salinan materi (informasi atau perangkat lunak) di
                     situs web
-                    Parsinta hanya untuk dilihat secara pribadi. Ini adalah pemberian lisensi, bukan transfer judul, dan
+                    HMJMI hanya untuk dilihat secara pribadi. Ini adalah pemberian lisensi, bukan transfer judul, dan
                     di bawah
                     lisensi ini Anda tidak boleh: Daftar sebagai member baik premium maupun yang biasa Ketika Anda
                     memang ingin
-                    menonton seri video tutorial di parsinta, maka anda harus terlebih dahulu mendaftar menjadi member
-                    di parsinta
+                    menonton seri video tutorial di HMJMI, maka anda harus terlebih dahulu mendaftar menjadi member
+                    di HMJMI
                     termasuk verifikasi email, jadi jika email Anda tidak valid, maka tidak akan bisa mendaftar di
-                    parsinta.
+                    HMJMI.
                 </p>
 
                 <p>
@@ -121,7 +94,7 @@
                     publik
                     (komersial atau non-komersial) Mencoba mendekompilasi atau merekayasa balik perangkat lunak apa pun
                     yang
-                    terdapat di situs web Parsinta Menghapus semua hak cipta atau nota kepemilikan lainnya dari materi
+                    terdapat di situs web HMJMI Menghapus semua hak cipta atau nota kepemilikan lainnya dari materi
                     atau transfer
                     materi ke orang lain atau menciplak materi pada server lain.
                 </p>
@@ -129,7 +102,7 @@
                 <h2>Penolakan</h2>
 
                 <p>
-                    Bahan-bahan di situs web Parsinta disediakan sebagaimana adanya. Parsinta tidak membuat jaminan,
+                    Bahan-bahan di situs web HMJMI disediakan sebagaimana adanya. HMJMI tidak membuat jaminan,
                     tersurat maupun
                     tersirat, dan dengan ini menolak dan meniadakan semua jaminan lainnya, termasuk tanpa batasan,
                     jaminan tersirat
@@ -139,7 +112,7 @@
                 </p>
 
                 <p>
-                    Lebih lanjut, Parsinta tidak menjamin atau membuat pernyataan apa pun mengenai keakuratan,
+                    Lebih lanjut, HMJMI tidak menjamin atau membuat pernyataan apa pun mengenai keakuratan,
                     kemungkinan hasil,
                     atau keandalan penggunaan materi di situs webnya atau yang terkait dengan materi tersebut atau pada
                     situs apa
@@ -149,13 +122,13 @@
                 <h2>Keterbatasan</h2>
 
                 <p>
-                    Dalam keadaan apa pun Parsinta atau pemasoknya tidak akan bertanggung jawab atas kerusakan apa pun
+                    Dalam keadaan apa pun HMJMI atau pemasoknya tidak akan bertanggung jawab atas kerusakan apa pun
                     (termasuk,
                     tanpa batasan, kerusakan karena hilangnya data atau laba, atau karena gangguan bisnis,) yang timbul
                     dari
-                    penggunaan atau ketidakmampuan untuk menggunakan materi di situs web Parsinta, bahkan jika
+                    penggunaan atau ketidakmampuan untuk menggunakan materi di situs web HMJMI, bahkan jika
                     perwakilan resmi
-                    Parsinta atau Parsinta telah diberitahu secara lisan atau tertulis tentang kemungkinan kerusakan
+                    HMJMI atau HMJMI telah diberitahu secara lisan atau tertulis tentang kemungkinan kerusakan
                     tersebut.
                 </p>
 
@@ -168,16 +141,16 @@
                 <h2>Revisi dan Errata</h2>
 
                 <p>
-                    Materi yang muncul di situs web Parsinta dapat mencakup kesalahan teknis, tipografi, atau
-                    fotografi. Parsinta
-                    tidak menjamin bahwa semua materi di situs webnya akurat, lengkap, atau terkini. Parsinta dapat
+                    Materi yang muncul di situs web HMJMI dapat mencakup kesalahan teknis, tipografi, atau
+                    fotografi. HMJMI
+                    tidak menjamin bahwa semua materi di situs webnya akurat, lengkap, atau terkini. HMJMI dapat
                     membuat
                     perubahan pada materi yang terdapat di situs webnya kapan saja tanpa pemberitahuan.
                 </p>
 
                 <p>
-                    Parsinta tidak membuat komitmen untuk memperbarui materi. Situs Ketentuan Penggunaan Modifikasi
-                    Parsinta dapat
+                    HMJMI tidak membuat komitmen untuk memperbarui materi. Situs Ketentuan Penggunaan Modifikasi
+                    HMJMI dapat
                     merevisi ketentuan penggunaan ini untuk situs webnya kapan saja tanpa pemberitahuan. Dengan
                     menggunakan situs
                     web ini Anda setuju untuk terikat dengan versi Persyaratan dan Ketentuan Penggunaan yang berlaku
@@ -186,18 +159,16 @@
             </div>
         </section>
 
-
         <section class="containerClient pb-100 pt-50">
             <div class="container">
 
                 <div class="clientTitle">
-                    <h2>Classroom</h2>
+                    <h2>HMJ MI</h2>
                     <p>
-                        SMAKDA Classroom adalah platform pembelajaran online yang berbentuk screencast yang ditujukan
-                        untuk para
-                        siswa RPL SMKN 2 Purbalingga. Melalui seri-seri seperti Laravel, Reactjs, Vuejs, Inertiajs,
-                        Html, Bootstrap,
-                        Tailwind CSS, dan Banyak lagi.
+                        Menghimpun dan mewadahi mahasiswa jurusan Informatika STMIK
+                        AKAKOM yang dalam menyalurkan aspirasi dan mengkoordinasikan
+                        kegiatan mahasiswa Manajemen Informatika serta menjaga nama baik almamater STMIK AKAKOM
+                        Yogyakarta.
                     </p>
                 </div>
             </div>
@@ -209,12 +180,14 @@
             <div class="container">
                 <div class="caption">
                     <h2>Tertarik Untuk Kolaborasi?</h2>
-                    <p>Memiliki kemampuan dibidang IT, dan ingin mengembangkan Platform SMAKDA Classroom? Hubungi para
-                        pengembang awal untuk mendapatkan akses tersebut!</p>
+                    <p>
+                        Kami suka membangun hubungan dekat dengan partner Kami. Kami percaya kolaborasi dinamis adalah
+                        satu-satunya cara untuk menyelesaikan pekerjaan dengan baik.
+                    </p>
                 </div>
 
                 <div class="cta">
-                    <a href="" class="btn btn-primary">Hubungi</a>
+                    <a href="contact.html" class="btn btn-primary">Hubungi</a>
                 </div>
             </div>
         </section>
@@ -226,89 +199,53 @@
                         <h2>About Us</h2>
                     </div>
                     <p>
-                        SMAKDA Classroom adalah platform pembelajaran online yang berbentuk screencast yang ditujukan
-                        untuk para
-                        siswa RPL SMKN 2 Purbalingga.
+                        HMJ MI adalah platform untuk jurusan Managemen Informatika Universitas Teknologi Digital
+                        Indonesia.
                     </p>
                     <p>
-                        SMAKDA Classroom is a Trademark of <a href="github.com/IkkiRama" class="pencipta">Rifki
+                        HMJ MI part of UTDI is a Trademark of <a href="https://github.com/IkkiRama"
+                            class="pencipta">Rifki
                             Romadhan</a>. Copyright
                         &copy;2021 ™
                     </p>
+
                 </div>
 
                 <div class="box">
                     <h2>Extra</h2>
-                    <a href="index.html">FAQ</a>
-                    <a href="destinasi.html">Blog</a>
-                    <a href="destinasi.html">Asset</a>
+                    <a href="faq.html">FAQ</a>
+                    <a href="fasilitas.html">Fasilitas</a>
                     <a href="contact.html">Contact</a>
-                    <a href="kontak.html">Privacy Policy</a>
-                    <a href="kontak.html">Saweria (Donate)</a>
-                    <a href="kontak.html">Terms & Condition</a>
+                    <a href="visiMisi.html">Visi & Misi</a>
+                    <a href="community.html">Community</a>
+                    <a href="PrivacyPolicy.html">Privacy Policy</a>
+                    <a href="TermsCondition.html">Terms & Condition</a>
                 </div>
 
 
                 <div class="box">
                     <h2>Social</h2>
-                    <a href="index.html">Github</a>
-                    <a href="destinasi.html">Twitter</a>
-                    <a href="kontak.html">Discord</a>
-                    <a href="kontak.html">Youtube</a>
-                    <a href="kontak.html">Telegram</a>
-                    <a href="kontak.html">Facebook</a>
-                    <a href="kontak.html">Instagram</a>
+                    <a href="https://github.com/IkkiRama">Github</a>
+                    <a href="https://twitter.com">Twitter</a>
+                    <a href="https://discord.com">Discord</a>
+                    <a href="https://youtube.com">Youtube</a>
+                    <a href="https://telegram.com">Telegram</a>
+                    <a href="https://facebook.com">Facebook</a>
+                    <a href="https://instagram.com">Instagram</a>
                 </div>
 
             </div>
         </section>
+
+
     </main>
 
     <footer>
         <div class="container">
-            SMAKDA Classroom &copy; 2021 | platform pembelajaran online.
+            <p>Created with <span>&hearts;</span> by TasBee</p>
         </div>
     </footer>
 
-
-    <div class="modalContainer">
-        <div class="modal">
-            <div class="modal-title">
-                <h2>Cari Series</h2>
-
-                <div class="icon close">
-                    <i class="fas fa-times"></i>
-                </div>
-            </div>
-
-            <div class="modal-body">
-                <div class="searchBox">
-
-                    <form action="">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="text" placeholder="Cari serie">
-                                <button class="btn btn-primary"><i class="fas fa-search"></i></button>
-                            </div>
-                        </div>
-                    </form>
-
-                    <div class="suggesti">
-                        <a href="" class="perSuggesti">HTML</a>
-                        <a href="" class="perSuggesti">CSS</a>
-                        <a href="" class="perSuggesti">HTML</a>
-                        <a href="" class="perSuggesti">CSS</a>
-                        <a href="" class="perSuggesti">HTML</a>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="modal-footer">
-                <a href="" class="btn btn-primary">Lihat Semua Pencarian</a>
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
